# UIDesignTester

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
assets/: basic.rcss
assets/hud/: hud.rcss  hud.rml
assets/images/: playericon.tga  ui_big_pieces.rcss  ui_big_pieces.tga
assets/menus/: main.rml  menu.rcss  menu.rml  options.rml  title.tga
assets/sandbox/: sandbox.rcss  sandbox.rml  sandbox_template.rml
src/: BzfKeys.h  BzfPlatform.cxx  BzfPlatform.h  CMakeLists.txt  GLCube.cxx  GLCube.h  GLUtils.cxx  GLUtils.h  PlatformFactory.cxx  PlatformFactory.h  RmlUi_Renderer_GL3.cpp  SDL2Platform.cxx  SDL2Platform.h  UI.cxx  UI.h  UI_SystemInterface.cxx  UI_SystemInterface.h  bzicon.h  global.h  main.cpp
src/Models/: HUDModel.cxx  HUDModel.h  OptionsModel.cxx  OptionsModel.h
